# stat-log-db

./: .flake8  .gitignore  README.md  requirements.txt  tools.sh
.github/workflows/: python-package.yml
stat_log_db/: pyproject.toml
stat_log_db/src/stat_log_db/: __init__.py  cli.py  data.py  db.py  exceptions.py  parser.py
stat_log_db/src/stat_log_db/modules/base/: __init__.py
stat_log_db/src/stat_log_db/modules/base/models/: base.py
stat_log_db/src/stat_log_db/modules/log/: __init__.py
stat_log_db/src/stat_log_db/modules/log/data/: log_levels.xml
stat_log_db/src/stat_log_db/modules/log/models/: log.py  log_level.py  log_type.py
stat_log_db/src/stat_log_db/modules/tag/: __init__.py
stat_log_db/src/stat_log_db/modules/tag/models/: tag.py
stat_log_db/tests/: test_db.py  test_sql_injection.py
tests/: test_tools.py
